--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 	<title>Sender</title>
 </head>
 <body>
-	<script src="sender.js"></script>
+	<script data-main="main" src="node_modules/requirejs/require.js"></script>
 </body>
 </html>
